# CrossReview

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  crossreview_eval.py  pyproject.toml
.sopify-skills/blueprint/: README.md  background.md  design.md  tasks.md
crossreview/: cli.py  config.py  normalizer.py  pack.py  schema.py
crossreview/core/: __init__.py  prompt.py
docs/: v0-scope.md
fixtures/: README.md
fixtures/001-hermes-subshell-leak/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/002-helloagents-codex-config/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/003-crossreview-review-fixes/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/004-graphify-download-badge/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/005-hermes-patch-hardening/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/006-helloagents-cleanup-path/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
fixtures/007-graphify-pipx-readme/: auto-adjudications.yaml  fixture.yaml  manual-findings.yaml  pack.json  review-result.json
prompt-lab/: README.md  prompt-template.md  run.py  summary.md
scripts/: migrate_prompt_lab_to_fixtures.py
tests/: test_cli.py  test_config.py  test_eval_harness.py  test_normalizer.py  test_pack.py  test_prompt_lab_run.py  test_schema.py
(+36 files in other folders)
