[project]
name = "crossreview"
version = "0.1.0a3"
description = "Context-isolated verification harness for AI-generated code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34",
]
dev = [
    "pytest",
    "ruff",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
crossreview = "crossreview.cli:_entry_point"

[tool.setuptools.packages.find]
include = ["crossreview*"]
